# air-gap-sync

./: Cargo.toml  README.md  received_output.txt
src/: compress.rs  encrypt.rs  main.rs  qr.rs  scanner.rs
